# MCGAL

./: .gitignore  Masterprosjekt.cabal  README.md  build.gradle  notes.txt  settings.gradle  testModel.mdl
artifacts/Masterprosjekt_main/: Masterprosjekt_main.html
builds/models/: defaultmodel.mdl  muddychildren.mdl  pqr.mdl  simple2propmodel.mdl
gradle/wrapper/: gradle-wrapper.properties
models/: defaultmodel.mdl  dragbenchmark.mdl  midSized.mdl  postermodel.mdl  test.mdl
src/: Base.hs  Checker.hs  Examples.hs  Main.hs  Paths.hs  Types.hs  WebGUI.hs
src/Haskell/: Examples.hs  Paths.hs  WebGUI.hs
src/Haskell/static/: index.html
src/Haskell/static/css/: default.css
src/main/java/formulaParser/antlr/: GALParser.java
src/main/kotlin/: Canvas.kt  CanvasConstants.kt  CanvasStateController.kt  Edge.kt  EdgeFragment.kt  Main.kt  State.kt  StateFragment.kt  StateView.kt
src/main/kotlin/agentpanel/: AgentListFragment.kt  AgentPanel.kt  AgentPanelController.kt
src/main/kotlin/canvas/: AgentItem.kt  AgentListFragment.kt  AgentPanel.kt  AgentPanelController.kt  Canvas.kt  CanvasConstants.kt  CanvasController.kt  CanvasStateController.kt  Edge.kt  EdgeController.kt  EdgeFragment.kt  FormulaFieldController.kt  Model.kt  State.kt  StateFragment.kt
src/main/kotlin/canvas/controllers/: CanvasController.kt  ClickMode.kt  DragBoxController.kt  DraggableController.kt  EdgeController.kt  StateController.kt
src/main/kotlin/canvas/data/: AgentItem.kt  Edge.kt  Model.kt  ModelComponent.kt  State.kt
src/main/kotlin/canvas/styles/: ModelStyles.kt  StateStyles.kt
src/main/kotlin/canvas/views/: Canvas.kt  DebugLabelHolder.kt  DragRectangle.kt  Draggable.kt  EdgeFragment.kt  StateFragment.kt
src/main/kotlin/dickingaround/: CanvasEvents.kt  MasterView.kt  PopupTest.kt  TestView.kt  ViewSwitchingTest.kt
src/main/kotlin/formulaParser/: BisimulationUtils.kt  FormCheckingUtils.kt  Formula.kt  FormulaParser.kt  FormulaUtils.kt  GALErrorListener.kt
src/main/kotlin/formulaParser/antlr/: GAL.g4  GALLexer.java  GALLexer.tokens  GALParser.java
src/main/kotlin/formulaParser/formulaDebugger/: DebugEntry.kt  Debugger.kt  DebuggingLabel.kt  ExecutionStep.kt  FormulaValue.kt
src/main/kotlin/formulafield/: FormulaField.kt  FormulaFieldController.kt  FormulaFieldLabel.kt  FormulaLabel.kt
src/main/kotlin/formulafield/styling/: LabelStyling.kt
src/main/kotlin/io/: ModelSerializer.kt  SerializableStructures.kt
src/main/kotlin/menus/: CanvasMenuBar.kt  MenuBarController.kt
src/main/kotlin/menus/styles/: MenuBarStyles.kt
src/main/kotlin/sidepanels/agentpanel/: AgentListFragment.kt  AgentPanel.kt  AgentPanelController.kt
src/main/kotlin/utils/: DefaultModel.kt  EdgePositioningUtils.kt
src/main/resources/: sample.fxml
src/static/: index.html
src/static/css/: default.css
src/test/kotlin/: TestBisimulationCheck.kt  TestGroupAnnouncements.kt
src/test/kotlin/formulaParser/: TestAnnounceableExtensions.kt  TestEquivalenceClasses.kt  TestPowerSetGenerator.kt
src/web/: index.html
test/: tests.hs
testmodels/: bisimContract4StatesShouldContractTo2States.mdl  bisimContract4StatesShouldContractTo3States.mdl  eqClassBasic.mdl  eqClassBasic3Agents.mdl  extensionsBasic.mdl  groupAnn3StateModel.mdl
(+15 files in other folders)
