name:                Masterprosjekt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/Anders_Eide/masterprosjekt
license:             BSD3
license-file:        LICENSE
author:              Anders Eide
maintainer:          example@example.com
copyright:           2017 Anders Eide
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Checker, Examples
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , Masterprosjekt
                     , containers
