name:                Masterprosjekt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/Anders_Eide/masterprosjekt
license:             BSD3
license-file:        LICENSE
author:              Anders Eide
maintainer:          example@example.com
copyright:           2017 Anders Eide
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/web/*.html

Data-dir:            .
Data-files:          src/web/*.html




executable             Webinterface
  hs-source-dirs:      src
  main-is:             WebGUI.hs
  other-modules:       Checker
                     , Types
                     , Examples
                     , Paths
                     , Paths_Masterprosjekt
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Masterprosjekt
                     , threepenny-gui
                     , filepath
                     , containers
                     , directory

library
  hs-source-dirs:      src
  exposed-modules:     Checker, Examples
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , Masterprosjekt
                     , containers
